# ai_countries

./: .gitignore  README.md  TODO.md  environment.yml  pruebas_menciones.ipynb  pyproject.toml  requirements.txt
.bat/: run_ai_patents.bat  run_bloque_geopolitico.bat  run_fusion_tablas.bat  run_open_alex.bat  run_schemas_snowflake.bat  run_world_bank.bat
dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/staging/: schema.yml  stg_openalex.sql  stg_worldbank.sql
dbt/seeds/: dim_countries.csv  schema.yml
dbt/tests/: anyo_coincide_con_payload.sql
docs/: briefing.md  estado.md  fase-01-entorno-auth-landing.md  fase-02-loader-gcs-bigquery.md  fase-03-dbt-transform.md
gcs/: load_bigquery.py  upload_gcs.py
ingestion/: config.py  oa_landing.py  validacion.py  wb_landing.py  world_bank.py
ingestion/old_v/: open_alex.py  world_bank.py
scripts/: ai_patents.py  open_alex.py  world_bank.py
tablas/: fusion_tablas.py  schemas_snowflake.py
tablas/sql/: ddl.sql  kpis_fusion.sql  pruebas.sql
tablas_snowflake/: bloque_geopolitico.py  fusion_tablas.py  schemas_snowflake.py
tablas_snowflake/sql/: arreglo_corea.sql  bloque_geopolitc.sql
tests/: oa_test.py  upload_test.py
