[project]
name = "ai-countries"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.42.1",
    "google-cloud-storage>=3.12.1",
    "pycountry>=26.2.16",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["ingestion", "tests"]

# se busca mediante regex - directorios, no archivos por CLI
# exclude = ["ingestion/old_v/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
]
